--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,12 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item ">
+              <a class="nav-link active" aria-current="page" href="/Vishal-Blog/">Home</a>
             </li>
-            <li class="nav-item active" >
-              <a class="nav-link" href="/about.html">About</a>
+            <li class="nav-item ">
+              <a class="nav-link" href="/Vishal-Blog/about.html">About</a>
             </li>
             <li class="nav-item"></li>
             <li class="nav-item dropdown">
@@ -60,7 +60,7 @@
               </ul>
             </li>
 
-            <a class="nav-link active" href="/contact.html">Contact Us</a>
+            <a class="nav-link" href="/Vishal-Blog/contact.html">Contact Us</a>
 
             <li class="nav-item dropdown">
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
