--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Vishal's Blog</a>
+        <a class="navbar-brand" href="/Vishal-Blog/">Vishal's Blog</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -34,10 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item ">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/Vishal-Blog/">Home</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/Vishal-Blog/about.html">About</a>
             </li>
             <li class="nav-item"></li>
             <li class="nav-item dropdown">
@@ -60,7 +60,7 @@
               </ul>
             </li>
 
-            <a class="nav-link" href="/contact.html">Contact Us</a>
+            <a class="nav-link" href="/Vishal-Blog/contact.html">Contact Us</a>
 
             <li class="nav-item dropdown">
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
