--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item ">
-              <a class="nav-link active" aria-current="page" href="/Vishal-Blog/">Home</a>
+              <a class="nav-link" aria-current="page" href="/Vishal-Blog/">Home</a>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="/Vishal-Blog/about.html">About</a>
@@ -60,7 +60,7 @@
               </ul>
             </li>
 
-            <a class="nav-link" href="/Vishal-Blog/contact.html">Contact Us</a>
+            <a class="nav-link active" href="/Vishal-Blog/contact.html">Contact Us</a>
 
             <li class="nav-item dropdown">
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
